// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PasswordReset > matches snapshot in en 1`] = `
<div
  class="page auth password-reset"
>
  <h1>
    Enter your new password. 
    <!---->
  </h1>
  <div
    class="toolbar"
  >
    
    
  </div>
  <main>
    
    
    
    <form
      novalidate=""
    >
      <div
        class="field password"
      >
        <label
          for="password"
        >
          Enter password
        </label>
        
        <input
          class=""
          name="password"
          tabindex="0"
          type="password"
        />
        <!---->
        
      </div>
      <div
        class="field password"
      >
        <label
          for="password"
        >
          Re-enter password
        </label>
        
        <input
          class=""
          name="confirmation"
          tabindex="0"
          type="password"
        />
        <!---->
        
      </div>
      <div
        class="submit"
      >
        <button
          class="loading-button"
          data-v-3fdbc7b3=""
        >
          <div
            class="label"
            data-v-3fdbc7b3=""
          >
            <span
              data-v-3fdbc7b3=""
            >
              Change Password
            </span>
          </div>
          <!---->
        </button>
      </div>
    </form>
    
  </main>
</div>
`;

exports[`PasswordReset > matches snapshot in fr 1`] = `
<div
  class="page auth password-reset"
>
  <h1>
    Réinitialisation de votre mot de passe 
    <!---->
  </h1>
  <div
    class="toolbar"
  >
    
    
  </div>
  <main>
    
    
    
    <form
      novalidate=""
    >
      <div
        class="field password"
      >
        <label
          for="password"
        >
          Nouveau mot de passe
        </label>
        
        <input
          class=""
          name="password"
          tabindex="0"
          type="password"
        />
        <!---->
        
      </div>
      <div
        class="field password"
      >
        <label
          for="password"
        >
          Confirmation de votre nouveau mot de passe
        </label>
        
        <input
          class=""
          name="confirmation"
          tabindex="0"
          type="password"
        />
        <!---->
        
      </div>
      <div
        class="submit"
      >
        <button
          class="loading-button"
          data-v-3fdbc7b3=""
        >
          <div
            class="label"
            data-v-3fdbc7b3=""
          >
            <span
              data-v-3fdbc7b3=""
            >
              Modifier votre mot de passe
            </span>
          </div>
          <!---->
        </button>
      </div>
    </form>
    
  </main>
</div>
`;
